--- a/PSSAKB/MainWindow.xaml
+++ b/PSSAKB/MainWindow.xaml
@@ -40,14 +40,14 @@
                             <DataGridTextColumn Binding="{Binding serviceDisplayName}" Header="Service Display Name"/>
                             <DataGridTextColumn Binding="{Binding serviceStatus}" Header="Service Status"/>
 
-                            <DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Restart Service">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Button Content="Restart" Command="{Binding Path=DataContext.restartServ,RelativeSource= {RelativeSource FindAncestor,  AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}"></Button>
                                     </DataTemplate>
                                 </DataGridTemplateColumn.CellTemplate>
                             </DataGridTemplateColumn>
-                            <DataGridTemplateColumn>
+                            <DataGridTemplateColumn Header="Start/Stop service">
                                 <DataGridTemplateColumn.CellTemplate>
                                     <DataTemplate>
                                         <Button Content="Stat/Stop" Command="{Binding Path=DataContext.changeServState, RelativeSource= {RelativeSource FindAncestor,  AncestorType={x:Type DataGrid}}}" CommandParameter="{Binding}"></Button>
@@ -171,10 +171,10 @@
                         <ColumnDefinition Width="3*"></ColumnDefinition>
                     </Grid.ColumnDefinitions>
                     <Label Grid.Row="0" Content="Log File Folder" Grid.Column="0"></Label>
-                    <ComboBox Name="cmbList" Grid.Column="1"></ComboBox>
+                    <ComboBox Name="cmbList" ItemsSource="{Binding Path=folderOptions.folderList}" DisplayMemberPath="folderName" SelectedItem="{Binding Path=lContent.selectedFolder,Mode=TwoWay}" Grid.ColumnSpan="2" Margin="152,0,8,0"/>
                     <Button Content="List files" Command="{Binding Path=getFilesList}" Grid.Column="2" Grid.Row="0" Width="100" HorizontalAlignment="Left"  VerticalAlignment="Top" VerticalContentAlignment="Stretch" Margin="1,0,0,0"/>
                     <Label Grid.Row="1" Grid.Column="0" Content="Read Direction"></Label>
-                    <ComboBox Name="comboReadDirection" ItemsSource="{Binding lContent.readDirection}" Grid.Row="1" Grid.Column="1"></ComboBox>
+                    <ComboBox Name="comboReadDirection" ItemsSource="{Binding Path=folderOptions.rdirect}" Grid.Row="1" Grid.Column="1"></ComboBox>
                     <Label Content="Lines to read" Grid.Row="1" Grid.Column="2"></Label>
                     <TextBox Name="Lines" VerticalScrollBarVisibility="Auto" AutoWordSelection="True" Grid.Row="1" Grid.Column="3"  Grid.ColumnSpan="2"  HorizontalAlignment="Stretch"  HorizontalContentAlignment="Stretch" Text="{Binding Path=lContent.linesToRead}"></TextBox>
                     <ScrollViewer VerticalScrollBarVisibility="Auto" Grid.Row="2" Grid.Column="0" Grid.ColumnSpan="3">
